ecmascript/parser/tests/test262-error-references/fail/4a19d40213c79876.js.stderr
error: Unexpected character '#'
 --> $DIR/tests/test262-parser/fail/4a19d40213c79876.js:1:3
  |
1 | i #= 0
  |   ^

